--- a/react-redux/package.json
+++ b/react-redux/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
